Prevent long words from breaking panels
Some manifest-supplied values contain very long words, e.g. URLs, which forced a horizontal scrollbar to be displayed on the affected panel. Fixed by forcing long strings to break.

--- a/src/styles/sections/app.scss
+++ b/src/styles/sections/app.scss
@@ -11,6 +11,7 @@
 	position: absolute;
 	right: 0;
 	top: 0;
+	word-break: break-word;
 
 	*,
 	*::before,
